<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- App-Titel, SplashActivity Icon-Beschreibung -->
    <string name="app_name">MediTalk</string>
    <string name="app_icon">MediTalk App Icon</string>

    <!-- MainActivity Titel -->
    <string name="main_title">MediTalk</string>
    <!-- Category-->
    <string name="medikamente_suchen">Medikamente suchen...</string>
    <string name="inhalation_button">inhalation_button</string>
    <string name="creams_oin_button">cream_button</string>
    <string name="drops_button">drops_button</string>
    <string name="pills_button">pills_button</string>
    <!-- Buttons unten / allgemein -->
    <string name="weiter">Weiter</string>
    <string name="Weiter">Weiter</string>
    <string name="exit">Exit</string>
    <string name="Exit">Exit</string>
    <string name="Logout">logout</string>
    <string name="home">Home</string>

    <!-- Sprach‐Labels unter den Flaggen -->
    <string name="lang_en">Englisch</string>
    <string name="lang_sl">Slowenisch</string>
    <string name="lang_es">Spanisch</string>
    <string name="lang_hr">Kroatisch</string>
    <string name="lang_it">Italienisch</string>
    <string name="lang_fr">Französisch</string>

    <!-- Menüeinträge im Drawer -->
    <string name="menu_home" />

    <!-- Sonstige Labels -->
    <string name="sprache_waehlen">Sprache wählen</string>
    <string name="pill_icon">icon_pill</string>
    <string name="nav_drawer">navigation_drawer</string>
    <string name="play_audio">play_audio</string>
    <string name="open_pdf">open_pdf</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="app_version">1.0</string>
    <string name="drop_icon">drop_icon</string>
    <string name="inhalation_icon">inhalation_icon</string>

    <!-- Nav_drawer_menu-->
    <string name="nav_language">Sprache ändern</string>
    <string name="nav_display">Anzeigeeinstellungen</string>
    <string name="nav_info">Info zur App</string>
    <string name="nav_home">Zurück zum vorherigen Screen</string>

    <!-- Nav_header_drawer-->
    <string name="app_title">MediTalk</string>
    <string name="current_language_english">Sprache: Englisch</string>

    <!-- SettingsActivity-->
    <string name="settings_title">Einstellungen</string>
    <string name="brightness_label">Bildschirmhelligkeit automatisch anpassen</string>
    <string name="brightness_subtext">(basierend auf Umgebungslicht)</string>
    <string name="playback_speed_title">Wiedergabegeschwindigkeit für Audio</string>
    <string name="playback_speed_desc">Passe die Abspielgeschwindigkeit von Audiodateien an.</string>
    <string name="speed_0_5x">0,5x</string>
    <string name="speed_1x">1x</string>
    <string name="speed_1_25x">1,25x</string>
    <string name="speed_1_5x">1,5x</string>
    <string name="speed_2x">2x</string>

    <!-- PillList-->
    <string name="tabletten">TABLETTEN</string>
    <string name="tablettenname">TABLETTENNAME</string>
    <string name="wie_nehme_ich_es_zu_mir_pill">Wie nehme ich es zu mir?</string>
    <!-- InhalationList-->
    <string name="inhalationen">INHALATIONEN</string>
    <string name="inhalationenname">INHALATIONENNAME</string>
    <string name="wie_nehme_ich_es_zu_mir_inhalation">Wie nehme ich es zu mir?</string>
    <!-- DropList-->
    <string name="tropfen">TROPFEN</string>
    <string name="tropfenname">TROPFENNAME</string>
    <string name="wie_nehme_ich_es_zu_mir_drop">Wie nehme ich es zu mir?</string>
    <!-- CreamList-->
    <string name="salben">SALBEN</string>
    <string name="salbenname">SALBENNAME</string>
    <string name="wie_nehme_ich_es_zu_mir_cream">Wie nehme ich es zu mir?</string>


</resources>